[package]
name = "github_releases"
version = "0.1.0"
authors = ["silence_zhpf <silence_zhpf@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
tinyget = "1.0"